; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sr.c_sr_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sr.c_sr_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdrom_device_info = type { %struct.scsi_cd* }
%struct.scsi_cd = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cdrom_device_info*)* @sr_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sr_release(%struct.cdrom_device_info* %0) #0 {
  %2 = alloca %struct.cdrom_device_info*, align 8
  %3 = alloca %struct.scsi_cd*, align 8
  store %struct.cdrom_device_info* %0, %struct.cdrom_device_info** %2, align 8
  %4 = load %struct.cdrom_device_info*, %struct.cdrom_device_info** %2, align 8
  %5 = getelementptr inbounds %struct.cdrom_device_info, %struct.cdrom_device_info* %4, i32 0, i32 0
  %6 = load %struct.scsi_cd*, %struct.scsi_cd** %5, align 8
  store %struct.scsi_cd* %6, %struct.scsi_cd** %3, align 8
  %7 = load %struct.scsi_cd*, %struct.scsi_cd** %3, align 8
  %8 = getelementptr inbounds %struct.scsi_cd, %struct.scsi_cd* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp sgt i32 %11, 2048
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.scsi_cd*, %struct.scsi_cd** %3, align 8
  %15 = call i32 @sr_set_blocklength(%struct.scsi_cd* %14, i32 2048)
  br label %16

16:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @sr_set_blocklength(%struct.scsi_cd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
